# mspc-south-bridge

./: CMakeLists.txt  packages.json
cmake/modules/: FindArmToolchain.cmake
config/: .config
disk/: disk_layout.json  disk_layout.json.template
linker/: south_bridge.ld
north_bridge/: hello.elf
simulation/: CMakeLists.txt  mspc.resc  north_bridge.resc  south_bridge.resc
source/: CMakeLists.txt  gpio.cpp2  main.cpp  main.cpp2  system_init.cpp  system_stubs.cpp  vector_table.S
